# geogram-boilerplate

./: CMakeLists.txt  LICENSE  README.md
apps/: cli.cpp  gui.cpp
images/: README.md  cli.tape
include/: MyGui.h  shared.h
src/: MyGui.cpp  shared.cpp
